#2 fix hidden scrollbar in login modal

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -30,6 +30,10 @@ body {
 	display: inline;
 }
 
+div#loginModal{
+	overflow:hidden;
+}
+
 div.chat-view{
 	height:100%;
 	width:100%;
